FILE(GLOB_RECURSE TEST_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp") 
SET(TEST_SOURCE ${TEST_FILES})

find_package(GTest REQUIRED)

ADD_EXECUTABLE(test_planck ${TEST_SOURCE})
TARGET_INCLUDE_DIRECTORIES(test_planck PUBLIC ${GTEST_INCLUDE_DIRS} )
TARGET_LINK_LIBRARIES(test_planck gtest::gtest)
SET_TARGET_PROPERTIES(test_planck PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)